--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "matheriser"
 version = "0.1.0"
 authors = ["akkuankka <cwmckenzie02@gmail.com>"]
 edition = "2018"
+license = "Hippocratic-2.1"
+license-file = "LICENSE.md"
+repository = "https://github.com/akkuankka/matheriser"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
